--- a/loginindex.css
+++ b/loginindex.css
@@ -1,4 +1,4 @@
-@media (max-width:425px){
+@media (max-width:1440px){
       *{
             margin: 0;
             padding: 0;
@@ -31,8 +31,8 @@
             top: 0px;
             z-index: 1000;
             background-color: white;
-            padding-left: 0.5rem;
-            padding-right: 0.5rem;
+            padding-left: 0.7rem;
+            padding-right: 0.7rem;
             grid-template-columns: repeat(2, 1fr);
             grid-template-rows: auto;
             grid-template-areas: "imageIconContainer notificationIconContainer";
@@ -97,8 +97,8 @@
             grid-area: loginMainBody;
             /* border: 3px solid red; */
             display: grid;
-            padding-left: 0.5rem;
-            padding-right: 0.5rem;
+            padding-left: 0.7rem;
+            padding-right: 0.7rem;
             grid-template-columns: repeat(1, 1fr);
             grid-template-rows: auto auto auto;
             grid-template-areas: "updatesLogoBitcoinRegisterLoginContainer"
@@ -126,7 +126,9 @@
             border: 1px solid rgb(124, 65, 147);
             background: rgb(235, 225, 243);
             border-radius: 0.5rem;
-            margin-top: 0.5rem;
+            margin-top: 1rem;
+            margin-bottom: 0.7rem;
+            padding: 0.5rem;
             display: grid;
             grid-template-columns: repeat(10, 1fr);
             grid-template-rows: auto;
@@ -144,8 +146,8 @@
       .updatesAvailableIconHolder{
             display: flex;
             position: absolute;
-            min-height: 1.1rem;
-            min-width: 1.1rem;
+            min-height: 1rem;
+            min-width: 1rem;
             /* border: 3px solid black; */
             background: rgb(211, 129, 233);
             border-radius: 50%;
@@ -169,10 +171,14 @@
             width: 100%;
             /* border: 3px solid black; */
             color: rgb(48, 17, 20);
-            font-size: 0.9rem;
+            font-size: 0.6rem;
             justify-content: center;
       }
+      .updatesAvailableWordsHolder h3{
+            margin-bottom: 0.3rem;
+      }
       /* updatesAvailableContainer ends here */
+
 
       /* logoContainer starts here */
       .logoContainer{
@@ -199,12 +205,15 @@
       }
       /* logoContainer ends here */
 
+
       /* bitcoinToUsdContainer starts here */
       .bitcoinToUsdContainer{
             grid-area: bitcoinToUsdContainer;
             /* border: 2px solid black; */
             display: flex;
             position: relative;
+            margin-bottom: 1rem;
+            margin-top: 1rem;
       }
       .bitcoinToUsdHolder{
             display: flex;
@@ -218,9 +227,14 @@
             color: rgb(20, 30, 20);
       }
       .bitcoinToUsdHolder h2{
-            font-size: 1.7rem;
+            font-size: 1.5rem;
+            margin-bottom: 0.3rem;
+      }
+      .bitcoinToUsdHolder p{
+            font-size: 0.8rem;
       }
       /* bitcoinToUsdContainer ends here */
+
 
       /* registerNowContainer starts here */
       .registerNowContainer{
@@ -240,8 +254,10 @@
             align-items: center;
             color: white;
             text-decoration: none;
+            padding: 1rem;
       }
       /* registerNowContainer ends here */
+
 
       /* loginContainer starts here */
       .loginContainer{
@@ -262,7 +278,8 @@
             align-items: center;
             color: rgb(124, 65, 147);
             text-decoration: none;
-            margin-bottom: 1rem;
+            margin-bottom: 3rem;
+            padding: 1rem;
       }
       /* loginContainer ends here */
 
@@ -284,8 +301,11 @@
             width: 100%;
             border: 0.01rem solid rgb(27, 9, 9);
             border-radius: 0.3rem;
-            padding: 0.5rem;
             text-decoration: none;
+            padding-right: 1rem;
+            padding-left: 1rem;
+            padding-top: 0.7rem;
+            padding-bottom: 0.7rem;
       }
       /* BTC Logo & Name */
       .btcLogoName{
@@ -386,6 +406,7 @@
       }
       /* BTC Market ends here */
 
+
       /* USDT Market starts here */
       .usdtMarketContainer{
             display: flex;
@@ -397,6 +418,10 @@
             border-radius: 0.3rem;
             padding: 0.5rem;
             text-decoration: none;
+            padding-right: 1rem;
+            padding-left: 1rem;
+            padding-top: 0.7rem;
+            padding-bottom: 0.7rem;
       }
       /* USDT Logo & Name */
       .usdtLogoName{
@@ -499,6 +524,7 @@
       }
       /* USDT Market ends here */
 
+
       /* ETH & BNB Market In Drop-Down starts here */
       /* Drop-Down satrs here */
       .ethBnbMarketContainer{
@@ -536,6 +562,7 @@
       }
       /* Drop-Down ends here */
 
+
       /* ETH Market starts here */
       .ethMarketContainer{
             display: flex;
@@ -547,6 +574,10 @@
             border-radius: 0.3rem;
             padding: 0.5rem;
             text-decoration: none;
+            padding-right: 1rem;
+            padding-left: 1rem;
+            padding-top: 0.7rem;
+            padding-bottom: 0.7rem;
       }
       /* ETH Logo & Name */
       .ethLogoName{
@@ -649,6 +680,7 @@
       }
       /* ETH Market ends here */
 
+
       /* BNB Market starts here */
       .bnbMarketContainer{
             display: flex;
@@ -660,6 +692,10 @@
             border-radius: 0.3rem;
             padding: 0.5rem;
             text-decoration: none;
+            padding-right: 1rem;
+            padding-left: 1rem;
+            padding-top: 0.7rem;
+            padding-bottom: 0.7rem;
       }
       /* BNB Logo & Name */
       .bnbLogoName{
@@ -820,6 +856,7 @@
             display: grid;
             gap: 0.8rem;
       }
+
       /* News Update 1 */
       .theImpactOfRegulatoryPolicies{
             display: flex;
@@ -828,7 +865,7 @@
             min-height: 3rem;
             width: 100%;
             border: 1px solid rgb(124, 65, 147);
-            padding: 0.7rem;
+            padding: 0.8rem;
             border-radius: 0.5rem;
             text-decoration: none;
       }
@@ -842,9 +879,11 @@
             position: relative;
             border-radius: 0.5rem;
             color: black;
+            font-size: 0.8rem;
       }
       .theImpactOfRegulatoryPoliciesWords .words{
             font-weight: bold;
+            margin-top: 0.3rem;
       }
       /* Image */
       .theImpactOfRegulatoryPoliciesImages{
@@ -859,6 +898,7 @@
             background-repeat: no-repeat;
             /* background-position: 120%; */
       }
+
       /* News Update 2 */
       .theDollarToNairaBlackMarket{
             display: flex;
@@ -867,7 +907,7 @@
             min-height: 3rem;
             width: 100%;
             border: 1px solid rgb(124, 65, 147);
-            padding: 0.7rem;
+            padding: 0.8rem;
             border-radius: 0.5rem;
             text-decoration: none;
       }
@@ -881,9 +921,11 @@
             position: relative;
             border-radius: 0.5rem;
             color: black;
+            font-size: 0.8rem;
       }
       .theDollarToNairaBlackMarketWords .words{
             font-weight: bold;
+            margin-top: 0.3rem;
       }
       /* Image */
       .theDollarToNairaBlackMarketImages{
@@ -898,6 +940,7 @@
             background-repeat: no-repeat;
             /* background-position: 120%; */
       }
+
       /* News Update 3 */
       .mobileCryptocurrencyManagement{
             display: flex;
@@ -906,7 +949,7 @@
             min-height: 3rem;
             width: 100%;
             border: 1px solid rgb(124, 65, 147);
-            padding: 0.7rem;
+            padding: 0.8rem;
             border-radius: 0.5rem;
             text-decoration: none;
       }
@@ -920,9 +963,11 @@
             position: relative;
             border-radius: 0.5rem;
             color: black;
+            font-size: 0.8rem;
       }
       .mobileCryptocurrencyManagementWords .words{
             font-weight: bold;
+            margin-top: 0.3rem;
       }
       /* Image */
       .mobileCryptocurrencyManagementImages{
@@ -936,6 +981,7 @@
             background-size: 100%;
             background-repeat: no-repeat;
       }
+
       /* News Update 4 */
       .decodingCryptoTheFutureOfBitcoin{
             display: flex;
@@ -944,7 +990,7 @@
             min-height: 3rem;
             width: 100%;
             border: 1px solid rgb(124, 65, 147);
-            padding: 0.7rem;
+            padding: 0.8rem;
             border-radius: 0.5rem;
             text-decoration: none;
       }
@@ -958,9 +1004,11 @@
             position: relative;
             border-radius: 0.5rem;
             color: black;
+            font-size: 0.8rem;
       }
       .decodingCryptoTheFutureOfBitcoinWords .words{
             font-weight: bold;
+            margin-top: 0.3rem;
       }
       /* Image */
       .decodingCryptoTheFutureOfBitcoinImages{
@@ -974,6 +1022,7 @@
             background-size: 100%;
             background-repeat: no-repeat;
       }
+
       /* News Update 5 */
       .insiderTipsForASecureBitcoin{
             display: flex;
@@ -982,7 +1031,7 @@
             min-height: 3rem;
             width: 100%;
             border: 1px solid rgb(124, 65, 147);
-            padding: 0.7rem;
+            padding: 0.8rem;
             border-radius: 0.5rem;
             text-decoration: none;
       }
@@ -996,9 +1045,11 @@
             position: relative;
             border-radius: 0.5rem;
             color: black;
+            font-size: 0.8rem;
       }
       .insiderTipsForASecureBitcoinWords .words{
             font-weight: bold;
+            margin-top: 0.3rem;
       }
       /* Image */
       .insiderTipsForASecureBitcoinImages{
@@ -1012,6 +1063,7 @@
             background-size: 100%;
             background-repeat: no-repeat;
       }
+
       /* News Updates 6 */
       .theMultiMillionConversion{
             display: flex;
@@ -1020,7 +1072,7 @@
             min-height: 3rem;
             width: 100%;
             border: 1px solid rgb(124, 65, 147);
-            padding: 0.7rem;
+            padding: 0.8rem;
             border-radius: 0.5rem;
             text-decoration: none;
       }
@@ -1034,9 +1086,11 @@
             position: relative;
             border-radius: 0.5rem;
             color: black;
+            font-size: 0.8rem;
       }
       .theMultiMillionConversion .words{
             font-weight: bold;
+            margin-top: 0.3rem;
       }
       /* Image */
       .theMultiMillionConversionImages{
@@ -1059,7 +1113,7 @@
             /* border: 1px solid rgb(124, 65, 147); */
             background: rgb(245, 242, 248);
             border-radius: 0.5rem;
-            padding: 0.7rem;
+            padding: 0.9rem;
             margin-top: 0.5rem;
             margin-bottom: 1.5rem;
             grid-template-areas: "ratedExcellentBy12980 ratedExcellentBy12980 ratedExcellentBy12980 ratedExcellentBy12980 ratedExcellentBy12980 ratedExcellentBy12980 ratedExcellentBy12980 starLogo trustpilot trustpilot";
@@ -1070,10 +1124,10 @@
             display: flex;
             min-height: 0.7rem;
             position: relative;
-            /* justify-content: center; */
+            justify-content: center;
             align-items: center;
-            font-size: 0.86rem;
-            font-weight: bold;
+            font-size: 0.8rem;
+            /* font-weight: bold; */
       }
       .starLogo{
             grid-area: starLogo;
@@ -1090,7 +1144,7 @@
             /* border: 2px solid gold; */
             position: absolute;
             background-image: url(images/starLogo1.jpg);
-            background-size: 100%;
+            background-size: 90%;
             background-repeat: no-repeat;
             justify-content: center;
             align-items: center;
@@ -1100,9 +1154,10 @@
             grid-area: trustpilot;
             /* border: 2px solid black; */
             display: flex;
-            justify-content: center;
+            justify-content: flex-start;
+            align-items: center;
             font-weight: bold;
-            font-size: 1.05rem;
+            font-size: 0.8rem;
             position: relative;
       }
       /* learnExploreContainer ends here */
