--- a/loginindex.css
+++ b/loginindex.css
@@ -232,6 +232,7 @@
       }
       .bitcoinToUsdHolder p{
             font-size: 0.7rem;
+            margin-top: 0.3rem;
       }
       /* bitcoinToUsdContainer ends here */
 
