--- a/register.css
+++ b/register.css
@@ -1,4 +1,4 @@
-@media (max-width:425px){
+@media (max-width:1440px){
       *{
             margin: 0;
             padding: 0;
@@ -40,6 +40,7 @@
       }
       /* Nav Bar ends here */
 
+
       /* Register Body starts here */
       .registerBody{
             grid-area: registerBody;
@@ -47,9 +48,10 @@
             display: flex;
             flex-direction: column;
             position: relative;
-            padding: 0.5rem;
+            padding: 0.7rem;
       }
       /* Register Body Contents */
+
       /* Create An Account */
       .createAnAccount{
             display: flex;
@@ -59,15 +61,17 @@
             /* border: 2px solid blue; */
             justify-content: center;
             align-items: center;
-            margin-top: 1.5rem;
-            margin-bottom: 1rem;
+            margin-top: 2rem;
+            margin-bottom: 2rem;
             color: rgb(40, 17, 27);
+            font-size: 0.8rem;
       }
+
       /* FORM */
       .enterYourEmail{
             width: 100%;
             min-height: 2rem;
-            padding: 0.7rem;
+            padding: 1rem;
             display: flex;
             position: relative;
             border: 1.5px solid rgb(124, 65, 147);
@@ -76,18 +80,22 @@
       span{
             color: red;
       }
+
+
       /* Send Register Link */
       .sendRegisterLink{
             width: 100%;
             min-height: 2rem;
-            padding: 0.7rem;
+            padding: 1rem;
             border-radius: 0.5rem;
             border: none;
             background: rgb(124, 65, 147);
             color: white;
-            margin-top: 1rem;
-            margin-bottom: 0.5rem;
+            margin-top: 1.5rem;
+            margin-bottom: 1rem;
       }
+
+
       /* Horizontal Line with "OR" at the middle */
       .orContainer{
             display: flex;
@@ -97,7 +105,7 @@
             /* border: 2px solid black; */
             justify-content: center;
             align-items: center;
-            margin-bottom: 0.5rem;
+            margin-bottom: 1rem;
       }
       .orHorizontalLine{
             width: 100%;
@@ -118,6 +126,8 @@
             align-items: center;
             color: rgb(40, 17, 27);
       }
+
+
       /* Continue With Google */
       .continueWithGoogleContainer{
             display: flex;
@@ -129,7 +139,7 @@
             border-radius: 0.5rem;
             justify-content: center;
             align-items: center;
-            padding: 0.5rem;
+            padding: 0.8rem;
             text-decoration: none;
             margin-bottom: 1rem;
       }
@@ -156,6 +166,8 @@
             font-weight: bold;
             margin-left: 0.4rem;
       }
+
+
       /* Continue With Facebook */
       .continueWithFacebookContainer{
             display: flex;
@@ -167,7 +179,7 @@
             border-radius: 0.5rem;
             justify-content: center;
             align-items: center;
-            padding: 0.5rem;
+            padding: 0.8rem;
             text-decoration: none;
             margin-bottom: 0.7rem;
       }
