--- a/register.css
+++ b/register.css
@@ -140,7 +140,7 @@
             border-radius: 0.5rem;
             justify-content: center;
             align-items: center;
-            padding: 0.8rem;
+            padding: 0.7rem;
             text-decoration: none;
             margin-bottom: 1rem;
       }
@@ -164,6 +164,7 @@
             /* border: 2px solid red; */
             align-items: center;
             color: rgb(40, 17, 27);
+            font-size: 0.9rem;
             font-weight: bold;
             margin-left: 0.4rem;
       }
@@ -180,7 +181,7 @@
             border-radius: 0.5rem;
             justify-content: center;
             align-items: center;
-            padding: 0.8rem;
+            padding: 0.7rem;
             text-decoration: none;
             margin-bottom: 0.7rem;
       }
@@ -206,6 +207,7 @@
             /* border: 2px solid red; */
             align-items: center;
             color: rgb(40, 17, 27);
+            font-size: 0.9rem;
             font-weight: bold;
             margin-left: 0.4rem;
       }
