--- a/login.css
+++ b/login.css
@@ -1,4 +1,4 @@
-@media (max-width:425px) {
+@media (max-width:1440px) {
       * {
             margin: 0;
             padding: 0;
@@ -42,8 +42,8 @@
       .loginNavBarBackwardArrowHolder .fa-solid {
             color: rgb(124, 65, 147);
       }
-
       /* Nav Bar ends here */
+
 
       /* Login Body starts here */
       .loginBody {
@@ -52,7 +52,7 @@
             display: flex;
             flex-direction: column;
             position: relative;
-            padding: 0.5rem;
+            padding: 0.7rem;
       }
 
       /* Login Body Contents */
@@ -65,37 +65,42 @@
             /* border: 2px solid blue; */
             justify-content: center;
             align-items: center;
-            margin-top: 1.5rem;
-            margin-bottom: 1rem;
+            margin-top: 2rem;
+            margin-bottom: 1.5rem;
             color: rgb(40, 17, 27);
+            font-size: 0.8rem;
       }
+
 
       /* FORM */
       .enterYourEmail {
             width: 100%;
             min-height: 2rem;
-            padding: 0.7rem;
+            padding: 1rem;
             display: flex;
             position: relative;
             border: 1.5px solid rgb(124, 65, 147);
             border-radius: 0.5rem;
+            margin-top: 0.5rem;
+            margin-bottom: 0.5rem;
       }
 
       span {
             color: red;
       }
 
+
       /* Send Register Link */
       .sendLoginLink {
             width: 100%;
             min-height: 2rem;
-            padding: 0.7rem;
+            padding: 1rem;
             border-radius: 0.5rem;
             border: none;
             background: rgb(124, 65, 147);
             color: white;
             margin-top: 1rem;
-            margin-bottom: 0.5rem;
+            margin-bottom: 1rem;
       }
       /* FORM END */
 
@@ -108,7 +113,7 @@
             /* border: 2px solid black; */
             justify-content: center;
             align-items: center;
-            margin-bottom: 0.5rem;
+            margin-bottom: 1rem;
       }
 
       .orHorizontalLine {
@@ -133,6 +138,7 @@
       }
       /* OR END */
 
+
       /* Continue With Google */
       .continueWithGoogleContainer {
             display: flex;
@@ -144,9 +150,10 @@
             border-radius: 0.5rem;
             justify-content: center;
             align-items: center;
-            padding: 0.5rem;
+            padding: 0.8rem;
             text-decoration: none;
             margin-bottom: 1rem;
+            font-size: 0.9rem;
       }
 
       .googleLogoHolder {
@@ -186,9 +193,10 @@
             border-radius: 0.5rem;
             justify-content: center;
             align-items: center;
-            padding: 0.5rem;
+            padding: 0.8rem;
             text-decoration: none;
             margin-bottom: 0.7rem;
+            font-size: 0.9rem;
       }
 
       .facebookLogoHolder {
