--- a/market.css
+++ b/market.css
@@ -88,6 +88,7 @@
             flex-direction: row;
             position: relative;
             margin-top: 1rem;
+            padding-top: 0.5rem;
        }
       /* Search Logo */
       .searchLogoHolder{
@@ -99,7 +100,7 @@
             align-items: center;
             justify-content: center;
             left: 0.7rem;
-            top: 0.3rem;
+            top: 0.9rem;
             z-index: 100;
       }
       /* Search */
@@ -115,7 +116,7 @@
       }
       .searchLogoHolder .fa-solid{
             color: rgb(124, 65, 147);
-            font-size: 1.3rem;
+            font-size: 1.2rem;
       }
 
 
