--- a/style.css
+++ b/style.css
@@ -322,6 +322,7 @@
       .withdraw{
             grid-area: withdraw;
             border: 2px solid rgb(124, 65, 147);
+            background: white;
             border-radius: 0.5rem;
             display: flex;
             position: relative;
