--- a/style.css
+++ b/style.css
@@ -260,6 +260,7 @@
       }
       .eye .fa-solid{
             font-size: 1rem;
+            color: rgb(124, 65, 147);
       }
 
       /* Arrow */
